# CMB-fish

./: .pre-commit-config.yaml  README.md  README.txt  pyproject.toml
config/: CV.ini  fontriberaPlanck.ini  test.ini
src/: CMB_forecast_main.py  fishercomputations.py  ioutils.py  setup.py  testing_robust_derivs.py
